--- a/index.html
+++ b/index.html
@@ -200,11 +200,13 @@
             Hey there! My name is Vicki, and I am a software engineer and former AP biology teacher with a passion for science, technology, and 
             education.
           <p>
-           While teaching online during the pandemic, I learned how truly powerful technology can be and discovered my passion for coding. After graduating from
-            the advanced software engineering boot camp, Hack Reactor, I gained experience creating user-friendly features with clean and efficient code at a SaaS startup using 
+           While teaching online during the pandemic, I learned how truly powerful technology can be and discovered my passion for coding. 
+            I decided to challenge myself, and joined the advanced software engineering boot camp, Hack Reactor, where I spent more than 1000 hours coding 
+            and developing software engineering applications with a talented group of engineers. After graduation, 
+            I gained experience creating user-friendly features with clean and efficient code at a SaaS startup, enhancing my skills in
             React, Typescript, Node, and GraphQL. 
           <p>
-            I am currently seeking my next adventure - please reach out if you think we would work well together!
+            I am currently seeking my next adventure to grow - please reach out if you think we would work well together!
           </p>
         </section>
 
