--- a/index.html
+++ b/index.html
@@ -415,13 +415,42 @@
             </div>
 
             <h3 class="h3">
-                <a href="./assets/images/Resume.pdf" class="h3" download
+                <a href="./assets/images/Resume_Vicki_Wong.pdf" class="h3" download
                   >Experience (Full Resume here)</a
                 >
               </h3>
           </div>
 
           <ol class="timeline-list">
+
+             <li class="timeline-item">
+
+              <h4 class="h4 timeline-item-title">Front End Web Developer</h4>
+              <h5 class="h4 timeline-item-title">Freelance</h5>
+              <span>1/2024 — Current </span>
+
+              <p class="timeline-text">
+                - Applied  JavaScript, MathJax, HTML, and CSS styles using Bootstrap to create interactive and accessible online lessons ranging from K-12th grade for Accelerate Education
+                - Implemented animations, jumplinks, image carousels, and new style elements within the Wordpress website to enhance user experience
+                - Collaborated with clients to define requirements, needs, and acceptance criteria to ensure satisfaction and optimal performance. 
+
+              </p>
+
+            </li>
+
+            <li class="timeline-item">
+
+              <h4 class="h4 timeline-item-title">Front End Web Developer</h4>
+              <h5 class="h4 timeline-item-title">ACE IoT Solutions</h5>
+              <span>1/2024 — 5/2024 </span>
+
+              <p class="timeline-text">
+               - Implemented and deployed a client redesign project aimed at optimizing user engagement, resulting in a more intuitive thermostat and device interface using React Native and TypeScript for iOS and Android development
+               - Ensured reliability of application by maintaining existing software packages and enhancing system performance, stability, and security
+               - In addition to the mobile app, transformed an internal tool website to a single-page application (SPA) using Vue.js backed with FastAPI
+              </p>
+
+            </li>
 
             <li class="timeline-item">
 
