--- a/index.html
+++ b/index.html
@@ -430,9 +430,9 @@
               <span>1/2024 — Current </span>
 
               <p class="timeline-text">
-                - Applied  JavaScript, MathJax, HTML, and CSS styles using Bootstrap to create interactive and accessible online lessons ranging from K-12th grade for Accelerate Education
-                - Implemented animations, jumplinks, image carousels, and new style elements within the Wordpress website to enhance user experience
-                - Collaborated with clients to define requirements, needs, and acceptance criteria to ensure satisfaction and optimal performance. 
+                - Applied <strong>JavaScript</strong>, <strong>MathJax</strong>, <strong>HTML</strong>, and <strong>CSS</strong> styles using <strong>Bootstrap</strong> to create interactive and accessible online lessons ranging from K-12th grade for Accelerate Education <br />
+                - Implemented animations, jumplinks, image carousels, and new style elements within the <strong>Wordpress</strong> website to enhance user experience <br />
+                - Collaborated with clients to define requirements, needs, and acceptance criteria to ensure satisfaction and optimal performance <br />
 
               </p>
 
@@ -445,9 +445,9 @@
               <span>1/2024 — 5/2024 </span>
 
               <p class="timeline-text">
-               - Implemented and deployed a client redesign project aimed at optimizing user engagement, resulting in a more intuitive thermostat and device interface using React Native and TypeScript for iOS and Android development
+               - Implemented and deployed a client redesign project aimed at optimizing user engagement, resulting in a more intuitive thermostat and device interface using <strong>React Native</strong> and <strong>TypeScript</strong> for iOS and Android development
                - Ensured reliability of application by maintaining existing software packages and enhancing system performance, stability, and security
-               - In addition to the mobile app, transformed an internal tool website to a single-page application (SPA) using Vue.js backed with FastAPI
+               - In addition to the mobile app, transformed an internal tool website to a single-page application (SPA) using <strong>Vue.js</strong> backed with FastAPI
               </p>
 
             </li>
