--- a/index.html
+++ b/index.html
@@ -748,6 +748,42 @@
           <ul class="project-list">
 
             <li class="project-item  active" data-filter-item data-category="web development">
+              <a href="https://ideal.accelerate-ed.com/pub/adefhj/em/-/lo/33ba7fdd-b16a-4689-bd74-b1a58efdc242/p/f154c431-1749-432e-b69c-5b7afa956c42?speechStream=False&speechStreamMode=collapsed">
+
+                <figure class="project-img">
+                  <div class="project-item-icon-box">
+                    <ion-icon name="eye-outline"></ion-icon>
+                  </div>
+
+                  <img src="./assets/images/accelerate.gif" alt="accelerate education demo" loading="lazy">
+                </figure>
+
+                <h3 class="project-title">Freelance: Accelerate Education</h3>
+
+                <p class="project-category">Web development</p>
+
+              </a>
+            </li>
+
+            <li class="project-item  active" data-filter-item data-category="web development">
+              <a href="https://isaacgroup.com/">
+
+                <figure class="project-img">
+                  <div class="project-item-icon-box">
+                    <ion-icon name="eye-outline"></ion-icon>
+                  </div>
+
+                  <img src="./assets/images/isaac.gif" alt="isaac group demo" loading="lazy">
+                </figure>
+
+                <h3 class="project-title">Freelance: Isaac Group</h3>
+
+                <p class="project-category">Web development</p>
+
+              </a>
+            </li>
+
+            <li class="project-item  active" data-filter-item data-category="web development">
               <a href="https://dottid.com/dev-updates/2023/portfolio-performance-insights">
 
                 <figure class="project-img">
@@ -797,6 +833,24 @@
                 <h3 class="project-title">Deal Terms Export</h3>
 
                 <p class="project-category">Web development</p>
+
+              </a>
+            </li>
+
+            <li class="project-item  active" data-filter-item data-category="mobile applications">
+              <a href="https://github.com/ACE-IoT-Solutions/connecting-mha-app">
+
+                <figure class="project-img">
+                  <div class="project-item-icon-box">
+                    <ion-icon name="eye-outline"></ion-icon>
+                  </div>
+
+                  <img src="./assets/images/changes.gif" alt="Connecting HEMS mobile app" loading="lazy">
+                </figure>
+
+                <h3 class="project-title">Connecting HEMS Mobile App</h3>
+
+                <p class="project-category">Mobile Applications</p>
 
               </a>
             </li>
