--- a/index.html
+++ b/index.html
@@ -845,7 +845,7 @@
                     <ion-icon name="eye-outline"></ion-icon>
                   </div>
 
-                  <img src="./assets/images/changes.gif" alt="Connecting HEMS mobile app" loading="lazy">
+                  <img src="./assets/images/thermostat.png" alt="Connecting HEMS mobile app" loading="lazy">
                 </figure>
 
                 <h3 class="project-title">Connecting HEMS Mobile App</h3>
