--- a/index.html
+++ b/index.html
@@ -747,9 +747,8 @@
 
           <ul class="project-list">
 
-            <li class="project-item  active" data-filter-item data-category="web development">
-              <a href="https://ideal.accelerate-ed.com/pub/adefhj/em/-/lo/33ba7fdd-b16a-4689-bd74-b1a58efdc242/p/f154c431-1749-432e-b69c-5b7afa956c42?speechStream=False&speechStreamMode=collapsed">
-
+<!--             <li class="project-item  active" data-filter-item data-category="web development">
+           
                 <figure class="project-img">
                   <div class="project-item-icon-box">
                     <ion-icon name="eye-outline"></ion-icon>
@@ -763,7 +762,7 @@
                 <p class="project-category">Web development</p>
 
               </a>
-            </li>
+            </li> -->
 
             <li class="project-item  active" data-filter-item data-category="web development">
               <a href="https://isaacgroup.com/">
